# GRAPE-traffic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: eddk data.ipynb  eddk opensky.ipynb  eddk output.ipynb  example receptors.csv  example.ipynb  test opensky.ipynb
src/GRAPE_traffic/: AirportOpensky.py  AirportTraffic.py  GrapeTraffic.py  LTO.csv  __init__.py  grape_traffic.conf
